03-kubernetes/raw-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-service
  namespace: echo-server-ns
spec:
  selector:
    app: echo-server
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
